changed the html tile from XClothes to Clothes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XClothes</title>
+    <title>Clothes</title>
     <script>
         
         function compareClothes(a,b) {
@@ -108,27 +108,27 @@
     <form action="">
         <div>
             <label>Cloth Code:</label>
-            <input type="text" name="clothesCode" id="clothesCode" />
+            <input type="text" name="clothesCode" id="clothesCode" style="position: absolute; right: 75.5%; border-radius: 4px; background-color: gainsboro;" />
         </div>
         <div>
             <label>Manufacturer ID:</label>
-            <input type="text" name="manufacturerId" id="manufacturerId" />
+            <input type="text" name="manufacturerId" id="manufacturerId" style="position: absolute; right: 75.5%; border-radius: 4px; background-color: gainsboro;;" />
         </div>
         <div>
             <label>Image-File:</label>
-            <input type="text" name="imageFilename" id="imageFilename" />
+            <input type="text" name="imageFilename" id="imageFilename" style="position: absolute; right: 75.5%; border-radius: 4px; background-color:gainsboro;" />
         </div>
         <div>
             <label>Short Description:</label>
-            <input type="text" name="shortDescription" id="shortDescription" />
+            <input type="text" name="shortDescription" id="shortDescription" style="position: absolute; right: 75.5%; border-radius: 4px; background-color: gainsboro;" />
         </div>
         <div>
             <label>Description More:</label>
-            <input type="text" name="descriptionMore" id="descriptionMore" />
+            <input type="text" name="descriptionMore" id="descriptionMore" style="position: absolute; right: 75.5%; border-radius: 4px; background-color: gainsboro;" />
         </div>
         <div>
             <label >Promotion-Availablity:</label>
-            <input type="text" name="availablePromo" id="availablePromo" />
+            <input type="text" name="availablePromo" id="availablePromo" style="position: absolute; right: 75.5%; border-radius: 4px; background-color: gainsboro;" />
         </div>
 
     
@@ -142,8 +142,8 @@
         style="border-collapse: collapse; position: relative; top: 15px; text-align: center;">
         <thead>
             <tr>
-                <th>code</th>
-                <th>manufacturerID</th>
+                <th>Code</th>
+                <th>Manufacturer-Id</th>
                 <th>Image-File</th>
                 <th>Short-Description</th>
                 <th>Description-More</th>
